# online-cv

./: .dockerignore  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yaml
config/: base.yml
config/de/: mkdocs.yml
config/en/: mkdocs.yml
docs/: index.md
docs/css/: extra.css
docs/de/: impressum.md  index.md  resume-short.md
docs/en/: imprint.md  index.md  resume-short.md
overrides/stylesheets/: extra.css  neoteroi-mkdocs.css  timeline.css
