[tool.poetry]
name = "online-cv"
version = "0.1.0"
description = "My online-cv."
authors = ["Thomas Tacke <thomas@tacke.email>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.32"
mkdocs-material-extensions = "^1.3.1"
neoteroi-mkdocs = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
